--- a/src/main/resources/templates/fragment/songmin_side.html
+++ b/src/main/resources/templates/fragment/songmin_side.html
@@ -1,6 +1,93 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
     <th:block th:fragment="songminSideFragment">
-        <h1 style="color: white;">탑3</h1>
+        <div class="row mb-3" >
+            <div class="col">
+                <h1 style="color: white;">화재현황 TOP 3</h1>
+                <span>2023년 주요 화재현황입니다.</span>
+            </div>
+            <div class="col text-end">
+                상세페이지
+            </div>
+        </div>
+        <div class="row" >
+            <div class="col d-grid">
+                <div class="row">
+                    <div class="col d-grid">📌</div>
+                    <div class="col d-grid">
+                        <h4>발화장소</h4>
+                    </div>
+                    <div class="col d-grid text-end">슬라이드</div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <h5>1위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                        <div class="row">
+                            <h5>2위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                        <div class="row">
+                            <h5>3위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col d-grid">
+                <div class="row">
+                    <div class="col d-grid">📌</div>
+                    <div class="col d-grid">
+                        <h4>발화요안</h4>
+                    </div>
+                    <div class="col d-grid text-end">슬라이드</div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <h5>1위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                        <div class="row">
+                            <h5>2위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                        <div class="row">
+                            <h5>3위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col d-grid">
+                <div class="row">
+                    <div class="col">📌</div>
+                    <div class="col">
+                        <h4>발화시간</h4>
+                    </div>
+                    <div class="col text-end">슬라이드</div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <h5>1위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                        <div class="row">
+                            <h5>2위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                        <div class="row">
+                            <h5>3위. 어쩌고</h5>
+                            <span>평균 1,500건</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        
     </th:block>
 </html>
