--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -9,11 +9,15 @@
 <link rel="stylesheet" href="/css/eunji_side.css">
 <style>
     .headerRow {height: 140px;
-                background-color: skyblue;}
-    .eunji {height: 550px;}
-    .songminjae {height: 400px;}
-    .jiwoo {height: 250px;
-            background-color: olivedrab;}
+                background-color: skyblue;
+                margin:0px 20px 0px 20px}
+    .eunji {height: 540px;
+            margin-left: 20px;}
+    .songminjae {height: 390px;
+                margin-right: 20px;}
+    .jiwoo {height: 240px;
+            background-color: olivedrab;
+            margin-left: 20px;}
     .minjae {background-color: mediumslateblue;}
     .songmin {background-color: sandybrown;}
 </style>
