--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -71,6 +71,7 @@
     </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="/js/eunji_side.js" type="module"></script>
+    <script src="/js/img_side.js"></script>
     <th:block layout:fragment="content_js">
     </th:block>
 </body>
