--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -18,7 +18,6 @@
     .jiwoo {height: 240px;
             background-color: olivedrab;
             margin-left: 20px;}
-    .minjae {background-color: mediumslateblue;}
     .img {background-color: white;}
 </style>
 </head>
@@ -44,7 +43,7 @@
                 </div>
             </div>
             <div class="col-7">
-                <div class="row songminjae minjae">
+                <div class="row songminjae">
                     <div class="col">
                         <div class="row">
                             <div class="col-8">
@@ -72,6 +71,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="/js/eunji_side.js" type="module"></script>
     <script src="/js/img_side.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/js/minjae_side.js"></script>
     <th:block layout:fragment="content_js">
     </th:block>
 </body>
