--- a/src/main/resources/templates/fragment/minjae_side.html
+++ b/src/main/resources/templates/fragment/minjae_side.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
     <th:block th:fragment="minjaeSideFragment">
-        <h1 style="color: white;">그래프</h1>
+    
+    <div class="layer">
+        <canvas id="mixed-chart"></canvas>
+    </div>
+
     </th:block>
 </html>
