--- a/src/main/resources/templates/fragment/jiwoo_side.html
+++ b/src/main/resources/templates/fragment/jiwoo_side.html
@@ -1,6 +1,118 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
     <th:block th:fragment="jiwooSideFragment">
-        <h1 style="color: white;">슬라이드쇼</h1>
+        <style>
+            .jiwoo{
+                background-image: url(/img/mainFire.jpg) ;
+                background-size: 800px 240px;
+                
+            }
+        </style>
+
+
+
+
+
+        <div class="row mb-1" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 300px;  top: 10px; left: 400px; position: relative; ">
+            <div class="col">
+                <div class="row">
+                    <div class="col" style="color: white; font-size: 20px;">
+                        2023 화재 발생건수
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="fireCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-1" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 300px;  top: 10px; left: 400px; position: relative; ">
+            <div class="col">
+                <div class="row">
+                    <div class="col" style="color: white; font-size: 20px;">
+                        2023 화재 인명피해인원수
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="victimCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row" style="background-color: rgba(48, 45, 45, 0.664); height:70px; width: 300px;  top: 10px; left: 400px; position: relative; ">
+            <div class="col">
+                <div class="row">
+                    <div class="col" style="color: white; font-size: 20px;">
+                        2023 화재 재산피해액
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="propertyCount" style="color: rgb(49, 225, 238); font-size: 30px; font-weight: bolder;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+    
+    
+    
+    
+    <script>
+    // //////////////////////화재 발생건수 ///////////////////////////////////////////    
+        let fireCount=document.querySelector('.fireCount');
+        let count=0;
+        let max=12345;
+
+        let counting=setInterval(function(){
+            if(count>=max){
+                count=max;
+                clearInterval(counting);
+            }
+            else{
+                count+= 1234;
+            }
+            fireCount.innerHTML=new Intl.NumberFormat().format(count);
+        }, 90);
+
+// ///////////////////인명피해인원수///////////////////
+        let victimCount=document.querySelector('.victimCount');
+        let count1=0;
+        let max1=22345;
+
+        let counting1=setInterval(function(){
+            if(count1>=max1){
+                count1=max1;
+                clearInterval(counting1);
+            }
+            else{
+                count1+= 2234;
+            }
+            victimCount.innerHTML=new Intl.NumberFormat().format(count1);
+        }, 90);
+
+
+// ///////////////////재산피해액///////////////////
+        let propertyCount=document.querySelector('.propertyCount');
+        let count2=0;
+        let max2=32345;
+
+        let counting2=setInterval(function(){
+            if(count2>=max2){
+                count2=max2;
+                clearInterval(counting2);
+            }
+            else{
+                count2+= 3234;
+            }
+            propertyCount.innerHTML=new Intl.NumberFormat().format(count2);
+        }, 90);
+    </script>
+    
     </th:block>
+
 </html>
