--- a/src/main/resources/templates/content/sido/sido_month_property.html
+++ b/src/main/resources/templates/content/sido/sido_month_property.html
@@ -12,13 +12,13 @@
     <!-- html 코드 작성 -->
     <div>
         <div>
-            <input type="button" class="btn btn-warning" value="강원도" onclick="gokang()">
+            dddddd
         </div>
     </div>
 </th:block>
 
 <th:block layout:fragment="content_jsp">
     <!-- html 파일이 열릴 때 같이 실행되는 js -->
-    <script src="/js/sido/sido_property.js"></script>
+    <script src="/js/sido/sido_month_property.js"></script>
 </th:block>
 </html>
