헤더 ê경로 수정

--- a/src/main/resources/templates/fragment/songmin_side.html
+++ b/src/main/resources/templates/fragment/songmin_side.html
@@ -9,8 +9,8 @@
                             <!-- 랭킹 슬라이드 -->
                             <div class="row mb-3" >
                                 <div class="col">
-                                    <h1 style="color: black;">화재현황 TOP 3</h1>
-                                    <span> 2023년 주요 화재현황입니다.</span>
+                                    <h1 style="color: black;">화재통계 TOP 3</h1>
+                                    <span> 2023년 주요 화재통계입니다.</span>
                                 </div>
                                 <div class="col text-end">
                                     <a class="icon-link link-secondary icon-link-hover" style="--bs-link-hover-color-rgb: 0, 0, 0;" href="#">
