--- a/src/main/resources/templates/fragment/eunji_side.html
+++ b/src/main/resources/templates/fragment/eunji_side.html
@@ -9,7 +9,7 @@
             <div class="col">
                 <div class="row">
                     <div class="offset-2 d3_test" id="map" style="position: relative;">
-                        <div id="tooltip" style="display: none; position: absolute; background-color: papayawhip; padding: 10px; border-radius: 5px; left: 400px; top: 350px; width: 150px; height: 100px; pointer-events: none; z-index: 10;">
+                        <div id="tooltip">
                             <span id="tooltip-name">지역명: </span><br>
                             <span id="tooltip-count">발생 건수: </span>
                         </div>
