--- a/src/main/resources/templates/fragment/main_header.html
+++ b/src/main/resources/templates/fragment/main_header.html
@@ -23,6 +23,13 @@
                     </li>
                 </ul>
             </div>
+            <div class="col-1">
+                <select id="yearChanger" name="selectYear" onchange="year_changer()">
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023" selected>2023</option>
+                </select>
+            </div>
         </div>            
     </th:block>
 </html>
