--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -73,6 +73,7 @@
     <script src="/js/img_side.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/js/minjae_side.js"></script>
+    <script src="/js/main_header.js"></script>
     <th:block layout:fragment="content_js">
     </th:block>
 </body>
