--- a/src/main/resources/templates/fragment/minjae_side.html
+++ b/src/main/resources/templates/fragment/minjae_side.html
@@ -3,6 +3,7 @@
     <th:block th:fragment="minjaeSideFragment">
     
     <div class="layer">
+        <input type="hidden" id="year" th:value="${year}">
         <canvas id="mixed-chart"></canvas>
     </div>
 
