--- a/src/main/resources/templates/fragment/main_header.html
+++ b/src/main/resources/templates/fragment/main_header.html
@@ -24,10 +24,10 @@
                 </ul>
             </div>
             <div class="col-1">
-                <select id="yearChanger" name="selectYear" onchange="year_changer()">
-                    <option value="2021">2021</option>
-                    <option value="2022">2022</option>
-                    <option value="2023" selected>2023</option>
+                <select class="form-select" id="yearChanger" name="selectYear" onchange="year_changer()">
+                    <option value="2021" th:selected="${year} == '2021'">2021</option>
+                    <option value="2022" th:selected="${year} == '2022'">2022</option>
+                    <option value="2023" th:selected="${year} == '2023'">2023</option>
                 </select>
             </div>
         </div>            
