--- a/src/main/resources/templates/content/sido/sido_month_property.html
+++ b/src/main/resources/templates/content/sido/sido_month_property.html
@@ -12,7 +12,7 @@
     <style>
         .boxsize{padding-right: 20px; padding-top: 20px; text-align: end; height: 100px;}
         th, td, tr {border: 1px solid rgba(122, 122, 122, 0.74); border-collapse: collapse;}
-        .row>*{padding-right: calc(var(--bs-gutter-x)* .0); padding-left: calc(var(--bs-gutter-x)* .0);}
+        .my-table-div .row>*{ padding-left: calc(var(--bs-gutter-x)* .0) ;padding-right: calc(var(--bs-gutter-x)* .0);}
         .tr-row{--bs-table-bg: rgba(170, 170, 170, 0.466);}
         .sido_row{--bs-table-bg: rgba(206, 207, 209, 0.192);}
         .scrollbar { 
@@ -34,11 +34,14 @@
             .scrollbar::-webkit-scrollbar-track {
                 background: rgba(0, 0, 0, 0.05);  /*스크롤바 뒷 배경 색상*/
             }
+
+    
+
     </style>
 
     <!-- html 코드 작성 -->
 
-    <div class="mt-4" style="margin-left: 200px;">
+    <div style="margin-left: 200px; margin-top: 80px; height: 1500px;">
             <!-- ///////////////////////////////////////월별 데이터 자바스크립트로 넘기기 //////////////////////////////////////////////////// -->
                     <!-- 2021 month -->
                     <th:block th:each=" month_2021, index : ${monthPro2021}">
@@ -57,7 +60,7 @@
                     </th:block>
 
         <!-- ///// 제목 ////// -->
-        <div class="row mt-4" style="width: 2000px; text-align: center;">
+        <div class="row mb-2"  style="width: 1500px; text-align: center;">
             <div class="col">
                 <h2>[ &nbsp; <strong>[[${monthPro2021[0].sidoNm}]]</strong> &nbsp;]</h2>  
             </div>
@@ -65,43 +68,43 @@
         <div class="row">
             <div class="col" >
                 
-                <div class="row" style="width: 2100px;">
+                <div class="row mt-4" style="width: 1500px;">
                         <!-- ////////////재산피해 그래프 ////////////-->                
-                        <div class="col-6">                        
-                            <div class="row mb-3" style=" width: 600px; text-align: end; color: rgb(116, 113, 113);">
+                        <div class="col-6" style="text-align: center;">                        
+                            <div class="row mb-3" style="color: rgb(116, 113, 113);">
                                 <div class="col">
                                     <h4><strong>년도별/월별  화재 재산피해액</strong></h4>  
                                 </div>
                             </div>
                             <div class="row mb-3">
-                                <div class="col-10">
+                                <div class="col">
                                     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script> 
-                                    <canvas id="line-chart3" width="900" height="300"></canvas>
+                                    <canvas id="line-chart3" width="700" height="250"></canvas>
                                     
                                 </div>
                             </div>
                         </div>
                         <!-- ////////////인명피해 그래프 ////////////-->
-                        <div class="col-6">                           
-                            <div class="row mb-3" style=" width: 600px; text-align: end; color: rgb(116, 113, 113);">
+                        <div class="col-6" style="text-align: center;">                           
+                            <div class="row mb-3" style="color: rgb(116, 113, 113);">
                                 <div class="col">
                                     <h4><strong>년도별/월별  화재 피해인명수</strong></h4>  
                                 </div>
                             </div>
                             <div class="row mb-3">
-                                <div class="col-10" style="margin-left: 10px;">
+                                <div class="col">
                                     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script> 
-                                    <canvas id="line-chart4"  width="900" height="300"></canvas>
+                                    <canvas id="line-chart4"  width="700" height="250"></canvas>
                                     
                                 </div>
                             </div>
                         </div>
                 </div>
                  <!-- //////////// 월별 피해재산액 & 피해인명수 통계표 ////////////-->
-                <div class="row mt-4" style="width: 2000px;">            
+                <div class="row mb-4 my-table-div" style="width: 1500px;">            
                     <div class="row scrollbar" style="width: 100%; border: 3px solid rgba(97, 97, 97, 0.795); height: 500px; overflow-y:auto; overflow-x:hidden;">
                                 <div class="col ">
-                                    <div class="row" style="width: 2000px;">
+                                    <div class="row" style="width: 1500px;">
                                         <div class="col-2" style="width: 200px;">         
                                             <table class="table text-center align-middle">
                                                 <colgroup>
@@ -122,11 +125,11 @@
                                                 </tr>                            
                                             </table>
                                         </div>
-                                        <div class="col-3" style="width: 600px;" >
+                                        <div class="col-3" style="width: 430px;" >
                                             <table class="table text-center align-middle">
                                                 <colgroup>                                    
-                                                    <col width="30%">
-                                                    <col width="35%">
+                                                    <col width="25%">
+                                                    <col width="40%">
                                                     <col width="35%">
                                                 </colgroup>                                    
                                                 <tr class="tr-row">                                        
@@ -161,11 +164,11 @@
                                                 </tr>
                                             </table>        
                                         </div> 
-                                        <div class="col-3" style="width: 600px;" >
+                                        <div class="col-3" style="width: 430px;" >
                                                 <table class="table text-center align-middle">
                                                     <colgroup>                                    
-                                                        <col width="30%">
-                                                        <col width="35%">
+                                                        <col width="25%">
+                                                        <col width="40%">
                                                         <col width="35%">
                                                     </colgroup>                                    
                                                     <tr class="tr-row">                                        
@@ -200,13 +203,13 @@
                                                     </tr>
                                                 </table>        
                                         </div> 
-                                        <div class="col-3" style="width: 600px;" >
+                                        <div class="col-3" style="width: 430px;" >
                                             <table class="table text-center align-middle">
                                                 <colgroup>                                    
-                                                    <col width="30%">
+                                                    <col width="25%">
+                                                    <col width="40%">
                                                     <col width="35%">
-                                                    <col width="35%">
-                                                </colgroup>                                    
+                                                </colgroup>                                   
                                                 <tr class="tr-row">                                        
                                                     <th colspan="3">2023</th>
                                                 </tr>
@@ -252,6 +255,7 @@
         
         </div>
     </div>
+  
 </th:block>
 
 <th:block layout:fragment="content_jsp">
