--- a/src/main/resources/templates/fragment/jiwoo_side.html
+++ b/src/main/resources/templates/fragment/jiwoo_side.html
@@ -22,7 +22,7 @@
         <th:block th:if="${year} == 2021">
                 <style>
                     .jiwoo{
-                        background-image: url(/img/mainFire.jpg) ;
+                        background-image: url(/img/mainFire2023.jpg) ;
                         background-size: 800px 240px; 
                     }
                 </style>
@@ -36,7 +36,17 @@
             <div class="col">
                 <div class="row">
                     <div class="col" style="color: white; font-size: 20px;">
-                        2023 화재 발생건수
+                        
+                        <th:block th:if="${year} == 2023">
+                            2023
+                        </th:block>
+                        <th:block th:if="${year} == 2022">
+                            2022
+                        </th:block>
+                        <th:block th:if="${year} == 2021">
+                            2021
+                        </th:block>                        
+                        화재 발생건수
                     </div>
                 </div>
                 <div class="row">
@@ -51,7 +61,16 @@
             <div class="col">
                 <div class="row">
                     <div class="col" style="color: white; font-size: 20px;">
-                        2023 화재 인명피해인원수
+                        <th:block th:if="${year} == 2023">
+                            2023
+                        </th:block>
+                        <th:block th:if="${year} == 2022">
+                            2022
+                        </th:block>
+                        <th:block th:if="${year} == 2021">
+                            2021
+                        </th:block>    
+                        화재 인명피해인원수
                     </div>
                 </div>
                 <div class="row">
@@ -66,7 +85,16 @@
             <div class="col">
                 <div class="row">
                     <div class="col" style="color: white; font-size: 20px;">
-                        2023 화재 재산피해액
+                        <th:block th:if="${year} == 2023">
+                            2023
+                        </th:block>
+                        <th:block th:if="${year} == 2022">
+                            2022
+                        </th:block>
+                        <th:block th:if="${year} == 2021">
+                            2021
+                        </th:block>    
+                        화재 재산피해액
                     </div>
                 </div>
                 <div class="row">
