--- a/src/main/resources/static/css/eunji_side.css
+++ b/src/main/resources/static/css/eunji_side.css
@@ -12,7 +12,7 @@
     --syntax_key:#6636b4;
     --mono_fonts:82%/1.5 Menlo,Consolas,monospace}.observablehq--collapsed,.observablehq--expanded,.observablehq--function,.observablehq--gray,.observablehq--import,.observablehq--string:after,.observablehq--string:before{color:var(--syntax_normal)}.observablehq--collapsed,.observablehq--inspect a{cursor:pointer}.observablehq--field{text-indent:-1em;margin-left:1em}.observablehq--empty{color:var(--syntax_comment)}.observablehq--blue,.observablehq--keyword{color:#3182bd}.observablehq--forbidden,.observablehq--pink{color:#e377c2}.observablehq--orange{color:#e6550d}.observablehq--boolean,.observablehq--null,.observablehq--undefined{color:var(--syntax_atom)}.observablehq--bigint,.observablehq--date,.observablehq--green,.observablehq--number,.observablehq--regexp,.observablehq--symbol{color:var(--syntax_number)}.observablehq--index,.observablehq--key{color:var(--syntax_key)}.observablehq--prototype-key{color:#aaa}.observablehq--empty{font-style:oblique}.observablehq--purple,.observablehq--string{color:var(--syntax_string)}.observablehq--error,.observablehq--red{color:#e7040f}.observablehq--inspect{font:var(--mono_fonts);overflow-x:auto;display:block;white-space:pre}.observablehq--error .observablehq--inspect{word-break:break-all;white-space:pre-wrap}
 
-.tooltip {
+/* .tooltip {
     position: absolute;
     text-align: center;
     width: auto;
@@ -25,7 +25,7 @@
     pointer-events: none;
     opacity: 0;
     transition: opacity 0.3s;
-}
+} */
 
 #tooltip{
     display: none; 
@@ -35,7 +35,7 @@
     border-radius: 3.85px; 
     left: 400px; 
     top: 350px; 
-    width: 150px; 
+    width: 180px; 
     height: 100px; 
     pointer-events: none; 
     z-index: 10; 
