--- a/src/main/resources/templates/fragment/main_layout.html
+++ b/src/main/resources/templates/fragment/main_layout.html
@@ -75,6 +75,7 @@
     <script src="/js/minjae_side.js"></script>
     <script src="/js/main_header.js"></script>
     <script src="/js/jiwoo_side.js"></script>
+    <script src="/js/songmin_side.js"></script>
     <th:block layout:fragment="content_js">
     </th:block>
 </body>
