--- a/src/main/resources/templates/fragment/songmin_side.html
+++ b/src/main/resources/templates/fragment/songmin_side.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="songminSideFragment">
     <div style="padding: 12px;">
+        <input type="hidden" id="yearSongmin" th:value="${year}">
         <div class="row">
             <div class="col-8">
                 <!-- 랭킹 슬라이드 -->
@@ -62,11 +63,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm7.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="ffn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="ffc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -89,11 +90,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm4.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="fsn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="fsc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -116,11 +117,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm5.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="ftn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="ftc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -174,11 +175,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm7.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="sfn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="sfc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -201,11 +202,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm4.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="ssn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="ssc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -228,11 +229,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm5.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="stn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="stc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -289,11 +290,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm7.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="tfn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="tfc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -316,11 +317,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm4.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="tsn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="tsc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
@@ -343,11 +344,11 @@
                                                                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm5.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
                                                                         </svg>
                                                                     </div>
-                                                                    <div class="col"
+                                                                    <div id="ttn" class="col"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         데이터
                                                                     </div>
-                                                                    <div class="col text-end"
+                                                                    <div id="ttc" class="col text-end"
                                                                         style="font-size: 18px; font-weight: bold;">
                                                                         150건
                                                                     </div>
